# ChangeLog for dev-java/java-getopt
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/java-getopt/ChangeLog,v 1.16 2007/06/04 09:32:41 caster Exp $

  04 Jun 2007; Vlastimil Babka <caster@gentoo.org>
  -java-getopt-1.0.10.ebuild:
  Remove gen-1 version.

  02 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  java-getopt-1.0.13.ebuild:
  Marked stable on amd64 for bug #180359.

  02 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  java-getopt-1.0.13.ebuild:
  stable x86, bug 180359

  01 Jun 2007; nixnut <nixnut@gentoo.org> java-getopt-1.0.13.ebuild:
  Stable on ppc wrt bug 180359

*java-getopt-1.0.13 (28 Jan 2007)

  28 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  +java-getopt-1.0.13.ebuild:
  Version bump using generation 2. Added doc and source use flags. Only
  upstream changes are support for more languages.

  28 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  -java-getopt-1.0.9.ebuild:
  Removed old version.

  18 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  java-getopt-1.0.10.ebuild:
  Stable on ppc.

  05 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> java-getopt-1.0.10.ebuild:
  stable on amd64 and x86

*java-getopt-1.0.10 (20 Oct 2004)

  20 Oct 2004; Dylan Carlson <absinthe@gentoo.org>
  +java-getopt-1.0.10.ebuild:
  Version bump. Keywords ~amd64.

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> java-getopt-1.0.9.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

  27 Jun 2004; Chris Aniszczyk <zx@gentoo.org> java-getopt-1.0.9.ebuild:
  Marking stable on ppc

  24 Jun 2004; David Holm <dholm@gentoo.org> java-getopt-1.0.9.ebuild:
  Added to ~ppc.

*java-getopt-1.0.0 (18 Oct 2002)

  18 Oct 2002; Karl Trygve Kalleberg <karltk@gentoo.org> java-getopt-1.0.9.ebuild, files/digest-java-getopt-1.0.9 :
  Initial version, all code submitted by Thomas Osterlie
  <thomas.osterlie@acm.org>. Fixes #7653.
