@@ -1,4 +1,4 @@
 DIST java-getopt-1.0.13.tar.gz 45759 RMD160 58618dadb318e9a5fa8cb3c12d7b98a486427375 SHA1 575432a284b08b097f920bc5fe6b6c27c7f60d06 SHA256 106edfea5056112bc88bd3691b6b145d6f50aa3e8ad0bf0b4f23fffcf2c45975
-EBUILD java-getopt-1.0.13.ebuild 958 RMD160 7b9cd74652a5ff82993798f57db4ea1fe67fc70c SHA1 68f41ea0b73236beaabab1dd829feeb66a8e53e2 SHA256 1150e7c96f0c9f49de135591f8dacc04447c2bc1826e8d29b103a61541de8c3c
-MISC ChangeLog 2096 RMD160 c9dc2162fdb62aabf29d389f8da1ba7803805fb7 SHA1 a87ec1ce83e9db20d8e208ba81769aec67ff49d0 SHA256 e2345bdb16d5406abfda92fa0214bfff142c0469648d339ee7b129170323c0ae
+EBUILD java-getopt-1.0.13.ebuild 966 RMD160 2b1cd7b0335be8096e6da8f8aeae68a06176eb96 SHA1 b88d61cda9ebc9fd419319b81e189ccd8046f2d6 SHA256 d77cd70b84333c665a101e5a445ad0ad74099eea1fbd0dcd38bdcec4db85afa5
+MISC ChangeLog 2222 RMD160 913b4d5da911305fb8a2e6dbcb4982f0b3695a3a SHA1 9879b21cff71a2013c6f96d03a34d8181d6763a6 SHA256 adb4fad2124384eb1cb6fe269d22646f370f116317298176e84ec246f8c77d17
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
