@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/java-getopt
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-getopt/ChangeLog,v 1.16 2007/06/04 09:32:41 caster Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-getopt/ChangeLog,v 1.17 2008/01/12 16:35:08 ranger Exp $
+
+  12 Jan 2008; Brent Baude <ranger@gentoo.org> java-getopt-1.0.13.ebuild:
+  Marking java-getopt-1.0.13 ~ppc64 for bug 129773
 
   04 Jun 2007; Vlastimil Babka <caster@gentoo.org>
   -java-getopt-1.0.10.ebuild:
